17/11/2009:
	- Update to Zoomify to fix way it calculates number of zoom levels.


05/11/2009:
	- Updated the autoconf, aclocal, automake and libtool scripts to the 
	  latest versions.


04/11/2009:
	- Added FILESYSTEM_PREFIX environment variable to allow a fixed prefix to
	  be applied to all image paths. Embedded NULL bytes of the form %00 and
	  any "../" are also now stripped out of any path for security reasons.
          (Thanks to Willem Hengeveld for suggesting this)


01/11/2009:
	- Fixes to View.h and View.cc to set the requested size to the maximum
	  allowable if not WID or HEI is set for the CVT command. The correct
	  resolution to use for CVT is now calculated for views smaller than
	  the smallest available.


30/10/2009:
	- Security fixes to Task.cc to make sure while loop is limited to the
	  expected number of arguments. (Thanks to Willem Hengeveld for pointing
	  this out).
	

19/08/2009:
	- Minor updates to IIPImage.h and IIPImage.cc. FIF.cc also now tests
	  for upper/lowercase .tif and .tiff suffixes.


14/08/2009:
	- Modification to View.cc and CVT.cc to calculate the appropriate
	  resolution as the smallest resolution with a dimension greater size
	  than the requested dimensions. The WID and HEI directives now
	  effectively give bounding dimensions.

11/08/2009:
	- Added simple nearest neighbour resampling to CVT command to allow it to
	  resize to the exact dimensions and not just the nearest available pyramid
	  resolution.
	- CVT Content-disposition tag now gives the image filename allowing the user
	  to save the image directly with this.


01/07/2009:
	- Added quality layer parameter to images for future use with file formats
	  such as JPEG2000 that support this. This allows the decoding of several
	  quality layers via the LYR command. Modifications to the RawTile API
	  as well as IIPImage::getTile resulting in a series of changes to
	  CVT.cc, JTL.CC, TIL.cc, TPTImage.cc, View.h, Main.cc and Environment.h.